# aiogqlc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  sitemap.xml  tox.ini
.github/: FUNDING.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml  tests.yml
advanced-usage/: index.html
aiogqlc/: __init__.py  client.py  constants.py  errors.py  http.py  types.py  utils.py  ws.py
aiogqlc/tests/: __init__.py  test_client.py  test_mutations.py  test_queries.py  test_uploads.py
authentication/: index.html
contributing/: index.html
docs/: advanced-usage.md  authentication.md  authorization.md  contributing.md  file-uploads.md  getting-started.md  index.md  migrating.md  mutations.md  queries.md  subscriptions.md  testing.md
examples/: simple_query.py
file-uploads/: index.html
getting-started/: index.html
migrating/: index.html
mutations/: index.html
queries/: index.html
search/: search_index.json
subscriptions/: index.html
testing/: index.html
tests/: app.py  conftest.py  smoke_test.py  test_client.py  test_example.py  test_mutations.py  test_queries.py  test_subscriptions.py  test_uploads.py  types.py
