[project]
name = "aiogqlc"
version = "5.3.0"
description = "aiohttp based GraphQL client"
authors = [{ name = "Jonathan Ehwald", email = "github@ehwald.info" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["aiohttp (>=3.6.0,<4.0.0)"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
homepage = "https://github.com/DoctorJohn/aiogqlc"
repository = "https://github.com/DoctorJohn/aiogqlc"
documentation = "https://github.com/DoctorJohn/aiogqlc"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "aiogqlc" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.3"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.24.0"
pytest-aiohttp = "^1.0.4"
strawberry-graphql = "^0.270.5"
mypy = "^1.11.1"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.8"
ruff = "^0.11.12"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
plugins = "strawberry.ext.mypy_plugin"
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=aiogqlc --cov-report term-missing --cov-report html"
