[metadata]
name = aiogqlc
version = attr: aiogqlc.__version__
description = aiohttp based GraphQL client with file upload support
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Jonathan Ehwald
author_email = pypi@ehwald.info
url = https://github.com/DoctorJohn/aiogqlc
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe=False
python_requires = >=3.7
install_requires =
    aiohttp >= 3.6.0
packages =
    aiogqlc

[options.extras_require]
dev =
    flake8==3.9.2
    isort==5.9.3
    black==21.9b0
    pre-commit==2.15.0
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-asyncio==0.15.1
    pytest-aiohttp==0.3.0
    tox==3.24.4
    twine==3.4.2
    strawberry-graphql==0.81.0
    mypy==0.910

[flake8]
max-line-length=119

[isort]
src_paths = ["aiogqlc"]
profile = black
known_first_party = ["aiogqlc"]

[coverage:run]
omit = */tests/*
