[metadata]
name = aiogqlc
version = attr: aiogqlc.__version__
description = aiohttp based GraphQL client with file upload support
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Jonathan Ehwald
author_email = pypi@ehwald.info
url = https://github.com/DoctorJohn/aiogqlc
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe=False
python_requires = >=3.7
install_requires =
    aiohttp >= 3.6.0
packages =
    aiogqlc

[options.package_data]
aiogqlc = py.typed

[options.extras_require]
dev =
    flake8==5.0.0
    isort==5.10.1
    black==22.6.0
    pre-commit==2.20.0
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-asyncio==0.19.0
    pytest-aiohttp==1.0.4
    tox==3.25.1
    twine==4.0.1
    strawberry-graphql==0.95.1
    mypy==0.971
    codecov==2.1.12
    mkdocs==1.2.4
    mkdocs-material==8.1.11

[flake8]
max-line-length=119

[isort]
src_paths = ["aiogqlc"]
profile = black
known_first_party = ["aiogqlc"]

[coverage:run]
omit = */tests/*
